Finally squashed stupid bug

--- a/src/components/Search/SearchBox/SearchBoxStyles.css
+++ b/src/components/Search/SearchBox/SearchBoxStyles.css
@@ -85,6 +85,6 @@
   }
 
   .searchBox {
-    width: 64vw;
+    width: 50vw;
   }
 }
